Sistemazione API e README
Modificate query parameters per interventions e events per ottenere il risultato della query su un particolare edificio (buildingId).

Aggiornato README.
